--- a/1.html
+++ b/1.html
@@ -59,6 +59,12 @@
 <br>Итак, если вы решили самостоятельно делать починку, то сначала имеет смысл узнать о том, как ремонтировать утюг. Для этой цели можно воспользоваться каким-нибудь поисковиком, например, бингом, или пролистать архивные подишивки журналов "Мастер-ломастер", "Домашняя мастерская", "Умелый мастер" и им подобные, или посетить соответствующий форум.
 <br>Я думаю, что вы не напрасно потратили свои усилия и настоящая статья может помочь вам отремонтировать утюг. В следующий раз я напишу о том, как починить радиатор или бетонный пол.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
