--- a/11.html
+++ b/11.html
@@ -61,6 +61,12 @@
 <br>Если вы все же приняли решение собственными руками заниматься ремонтом, то сперва наперво нужно узнать о том, как делать починку кровли. Для этого стоит воспользоваться поисковиком, скажем, google, или просмотреть подишивки журналов "Юный техник", "Домашний умелец", "Домашняя мастерская" и им подобных, или почитать профильный форум.
 <br>Надеюсь, что вы не напрасно потратили время и данная статья поможет вам решить данную проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
