--- a/16.html
+++ b/16.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили самому заниматься ремонтом, то сперва наперво необходимо узнать о том, как чинить крышу гаража. Для этой цели можно воспользоваться bing, либо просмотреть подишивки журналов "Умелый мастер", "Домашний мастер" и тому подобное.
 <br>Я надеюсь, что эта статья хотя бы немного помогла вам починить крышу гаража. В следующей статье я напишу о том, как отремонтировать стеклоподъемник либо смеситель в ванной.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
