--- a/17.html
+++ b/17.html
@@ -60,6 +60,12 @@
 <br>Итак, если вы все же решили самостоятельно ремонтировать, то сперва имеет смысл узнать о том, как ремонтировать материнскую плату. Для этого можно воспользоваться bing, или почитать архивные выпуски журналов "Моделист-конструктор", "Домашний мастер" и тому подобное, или позависать на популярном сообществе либо форуме.
 <br>Надеюсь, что данная статья сможет помочь вам отремонтировать материнскую плату. В следующий раз я напишу о том, как отремонтировать тачпад или цоколь.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
