--- a/19.html
+++ b/19.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение самостоятельно делать починку, то первым делом надо раздобыть информацию о том, как чинить блютуз. Для этого можно воспользоваться рамблером, или почитать архивные номера журналов типа "Мастер-ломастер", или задать вопрос на профильном форуме.
 <br>Думаю, что вы не напрасно потратили свои усилия и настоящая статья помогла вам решить задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
