--- a/22.html
+++ b/22.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы приняли решение своими силами выполнять починку, то первым делом необходимо узнать о том, как заниматься ремонтом прикуривателя. Для этой цели имеет смысл воспользоваться яндексом, либо пролистать архивные выпуски журналов наподобие "Домашняя мастерская", "Сам себе мастер", или пообщаться на форуме.
 <br>Думаю, что настоящая статья сможет помочь вам отремонтировать прикуриватель.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
