--- a/25.html
+++ b/25.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили самостоятельно заниматься починкой, то сначала нужно получить информацию о том, как чинить куртку. Для этой цели можно воспользоваться yahoo, либо просмотреть номера журналов наподобие "Домашний мастер", "Юный техник", или почитать профильный форум.
 <br>Надеюсь, что вы не зря потратили усилия и эта статья хотя бы чем-нибудь поможет вам отремонтировать куртку. В следующей статье вы сможете прочесть о том, как починить циркуляционный насос либо зонт.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
