--- a/35.html
+++ b/35.html
@@ -63,6 +63,12 @@
 <br>Если вы приняли решение самому чинить, то сперва необходимо раздобыть информацию о том, как заниматься починкой резиновой лодки. Для этой цели есть смысл воспользоваться yahoo, или просмотреть архивные выпуски журналов "Умелый мастер", "Юный техник", "Сам себе мастер" и т.п..
 <br>Надеюсь, что вы не зря потратили свое драгоценное время и данная статья хотя бы немного помогла вам починить резиновую лодку. В следующий раз я расскажу о том, как починить пульт ду или старый дом.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
