--- a/36.html
+++ b/36.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили самому ремонтировать, то сперва наперво нужно получить информацию о том, как чинить гараж. Для этого можно воспользоваться yandex.
 <br>Я думаю, что эта статья хотя бы чем-нибудь помогла вам решить данный вопрос. В следующей статье я напишу о том, как починить кран в ванной или внешний жесткий диск.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
