--- a/39.html
+++ b/39.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все же решили собственными руками чинить, то сперва наперво стоит узнать о том, как чинить мотоцикл урал. Для этих целей можно воспользоваться rambler либо mail.ru, либо посмотреть номера журналов "Моделист-конструктор", "Мастер-ломастер" и тому подобное.
 <br>Думаю, что настоящая статья хотя бы чем-то поможет вам решить эту проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
