--- a/41.html
+++ b/41.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили своими силами ремонтировать, то сперва необходимо раздобыть инфу о том, как делать ремонт блютуза. Для этих целей можно воспользоваться гуглом либо bing, или почитать специализированный форум либо сообщество.
 <br>Я надеюсь, что вы не напрасно потратили усилия и эта статья смогла помочь вам решить эту задачу. В следующий раз вы сможете прочесть о том, как починить дверной замок либо дверной замок.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
