--- a/45.html
+++ b/45.html
@@ -62,6 +62,12 @@
 <br>Если вы решили самому чинить, то сперва наперво надо получить информацию о том, как чинить люк. Для этого есть смысл воспользоваться bing или яндексом, или посмотреть выпуски журналов "Умелый мастер".
 <br>Я надеюсь, что эта статья хотя бы чем-то помогла вам решить задачу. В следующей статье я напишу о том, как починить авто либо авто.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
