--- a/53.html
+++ b/53.html
@@ -62,6 +62,12 @@
 <br>Если вы решили самому чинить, то сначала имеет смысл раздобыть инфу о том, как ремонтировать дверцу шкафа. Для этого стоит воспользоваться каким-то поисковиком, например, рамблером, или посмотреть архивные подишивки журналов "Сам себе мастер", или изучить популярный форум либо сообщество.
 <br>Думаю, что данная статья смогла помочь вам решить вопрос. В следующей статье я напишу о том, как отремонтировать процессор или кран на кухне.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
