--- a/59.html
+++ b/59.html
@@ -62,6 +62,12 @@
 <br>Если вы все же приняли решение самому ремонтировать, то сперва наперво стоит узнать о том, как делать ремонт раковины. Для этой цели есть смысл воспользоваться поисковиком, скажем, bing или yahoo.
 <br>Надеюсь, что вы не зря потратили усилия и настоящая статья хотя бы немного поможет вам решить эту задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
