--- a/60.html
+++ b/60.html
@@ -61,6 +61,12 @@
 <br>Если вы приняли решение самостоятельно делать починку, то сначала необходимо получить инфу о том, как заниматься ремонтом мфу. Для этого стоит воспользоваться любым поисковиком, скажем, mail.ru, либо посетить профильный форум.
 <br>Думаю, что настоящая статья хотя бы немного помогла вам отремонтировать мфу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
