--- a/67.html
+++ b/67.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение своими руками заниматься ремонтом, то сначала есть смысл узнать о том, как выполнять починку циркуляционного насоса. Для этого имеет смысл воспользоваться гуглом или яхой, либо создать тему на тематическом сообществе либо форуме.
 <br>Я думаю, что вы не зря потратили усилия и данная статья может помочь вам починить циркуляционный насос. В следующий раз вы сможете прочесть о том, как починить мп3 плеер или мп3 плеер.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
