--- a/75.html
+++ b/75.html
@@ -62,6 +62,12 @@
 <br>Если вы приняли решение самостоятельно заниматься починкой, то сперва стоит узнать о том, как делать починку zippo. Для этой цели можно воспользоваться яхой или яндексом, или просмотреть архивные номера журналов наподобие "Умелый мастер", либо позависать на популярном форуме.
 <br>Думаю, что вы не напрасно потратили свои усилия и эта статья смогла помочь вам решить данную задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
