--- a/76.html
+++ b/76.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же приняли решение самостоятельно чинить, то сперва наперво имеет смысл узнать о том, как ремонтировать обои. Для этого можно воспользоваться рамблером или гуглом, или просмотреть старые подишивки журналов "Домашняя мастерская" или "Моделист-конструктор".
 <br>Я надеюсь, что данная статья хотя бы чем-нибудь поможет вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
