--- a/77.html
+++ b/77.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самостоятельно заниматься ремонтом, то первым делом надо получить информацию о том, как ремонтировать радиоприемник. Для этой цели стоит воспользоваться mail.ru, или создать тему на форуме.
 <br>Я думаю, что данная статья хотя бы чем-то может помочь вам решить данную проблему. В следующей статье я расскажу о том, как починить бампер ваз 2114 либо потолок.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
