--- a/8.html
+++ b/8.html
@@ -61,6 +61,12 @@
 <br>Если вы все таки решили самостоятельно делать починку, то первым делом необходимо раздобыть информацию о том, как ремонтировать ручку. Для этих целей можно воспользоваться гуглом или rambler.
 <br>Я думаю, что вы не напрасно потратили свои усилия и данная статья помогла вам решить данную проблему. В следующий раз я расскажу о том, как починить микрофон или дверную ручку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
