--- a/83.html
+++ b/83.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что вы не напрасно потратили свои усилия и эта статья хотя бы чем-то может помочь вам решить вопрос. В следующей статье я расскажу о том, как починить скейт или кабель.
 <br>Заходите к нам почаще, чтобы быть в курсе всех новых событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
