--- a/87.html
+++ b/87.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же решили самому чинить, то сперва надо получить информацию о том, как заниматься починкой печки. Для этих целей можно воспользоваться mail.ru.
 <br>Думаю, что данная статья хотя бы чем-то поможет вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
