--- a/88.html
+++ b/88.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самому выполнять ремонт, то сперва наперво необходимо раздобыть инфу о том, как заниматься ремонтом шланга. Для этих целей можно воспользоваться поисковиком, скажем, rambler либо яндексом, или посмотреть подишивки журналов наподобие "Моделист-конструктор", "Мастер-ломастер".
 <br>Я надеюсь, что данная статья хотя бы немного поможет вам отремонтировать шланг.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
