--- a/9.html
+++ b/9.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение самостоятельно заниматься починкой, то сперва нужно узнать о том, как ремонтировать старый диван. Для этого есть смысл воспользоваться яндексом.
 <br>Надеюсь, что вы не напрасно потратили свое драгоценное время и настоящая статья хотя бы немного может помочь вам решить проблему. В следующей статье я напишу о том, как отремонтировать фундамент дома или фундамент дома.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
