--- a/91.html
+++ b/91.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы все таки приняли решение самому ремонтировать, то сначала надо раздобыть инфу о том, как чинить акриловую ванну. Для этих целей стоит воспользоваться поисковиком, либо почитать архивные подишивки журналов "Моделист-конструктор", "Мастер-ломастер", или задать вопрос на соответствующем форуме или сообществе.
 <br>Я надеюсь, что вы не зря потратили усилия и эта статья хотя бы чем-нибудь поможет вам решить данную проблему. В следующей статье я напишу о том, как отремонтировать жигули или оверлок.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
