--- a/93.html
+++ b/93.html
@@ -61,6 +61,12 @@
 <br>Если вы решили самостоятельно заниматься починкой, то сначала нужно узнать о том, как выполнять ремонт аккордеона. Для этого можно воспользоваться каким-то поисковиком, скажем, rambler либо yahoo.
 <br>Я думаю, что настоящая статья хотя бы немного поможет вам сделать ремонт аккордеона. В следующей статье я напишу о том, как отремонтировать тент или тент.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
