--- a/94.html
+++ b/94.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самому чинить, то сперва наперво нужно узнать о том, как ремонтировать бензогенератор. Для этой цели стоит воспользоваться каким-нибудь поисковиком, или поискать ответ на соответствующий вопрос на популярном форуме или сообществе.
 <br>Надеюсь, что вы не напрасно потратили свое время и эта статья хотя бы немного смогла помочь вам починить бензогенератор.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
