--- a/95.html
+++ b/95.html
@@ -62,6 +62,12 @@
 <br>Если вы все таки решили самому заниматься починкой, то первым делом необходимо узнать о том, как чинить мышь. Для этого можно воспользоваться вашим любимым поисковиком, или пролистать номера журналов "Сам себе мастер".
 <br>Надеюсь, что настоящая статья хотя бы чем-то смогла помочь вам выполнить починку мыши. В следующий раз я напишу о том, как починить старый фундамент либо плату.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
