--- a/96.html
+++ b/96.html
@@ -64,6 +64,12 @@
 <br>Я надеюсь, что вы не зря потратили свое время и настоящая статья хотя бы чем-то помогла вам выполнить ремонт шиферной крыши. В следующей статье я напишу о том, как отремонтировать замок или рычажный кран.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех свежих событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
