--- a/12.html
+++ b/12.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили своими силами чинить, то сперва наперво надо раздобыть информацию о том, как чинить окно. Для этой цели можно воспользоваться поисковиком, скажем, рамблером либо бингом, или пересмотреть подишивки журналов "Домашняя мастерская", "Моделист-конструктор", "Умелый мастер" и т.д..
 <br>Я думаю, что настоящая статья поможет вам отремонтировать окно.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
