--- a/13.html
+++ b/13.html
@@ -62,6 +62,12 @@
 <br>Если вы все же решили собственными руками заниматься починкой, то сперва есть смысл раздобыть инфу о том, как выполнять ремонт джойстика. Для этого имеет смысл воспользоваться поисковиком, или просмотреть выпуски журналов "Домашняя мастерская", "Домашний умелец" и так далее.
 <br>Я надеюсь, что вы не зря потратили время и данная статья хотя бы немного сможет помочь вам решить проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
