--- a/14.html
+++ b/14.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки решили своими силами чинить, то сначала необходимо узнать о том, как выполнять ремонт блендера браун. Для этих целей стоит воспользоваться поисковиком, например, mail.ru, либо почитать номера журналов "Сам себе мастер", "Умелый мастер", "Ремонтируем своими силами" и т.д..
 <br>Думаю, что данная статья помогла вам сделать починку блендера браун.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
