--- a/15.html
+++ b/15.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все таки приняли решение самому делать ремонт, то сперва наперво надо раздобыть информацию о том, как заниматься ремонтом ps2. Для этого стоит воспользоваться рамблером, или посетить специализированный форум.
 <br>Думаю, что эта статья хотя бы немного помогла вам починить ps2. В следующей статье вы сможете узнать о том, как починить автоматический зонт либо пластиковый бампер.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
