--- a/18.html
+++ b/18.html
@@ -64,6 +64,12 @@
 <br>Надеюсь, что вы не напрасно потратили свое время и данная статья поможет вам отремонтировать колодец. В следующий раз я напишу о том, как отремонтировать старый пол либо старый пол.
 <br>Заходите на наш сайт почаще, чтобы быть в курсе всех актуальных событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
