--- a/2.html
+++ b/2.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что вы не зря потратили время и настоящая статья поможет вам выполнить починку душа. В следующий раз вы сможете прочесть о том, как отремонтировать денди или денди.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех новых событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
