--- a/23.html
+++ b/23.html
@@ -64,6 +64,12 @@
 <br>Думаю, что вы не напрасно потратили усилия и настоящая статья помогла вам решить этот вопрос. В следующей статье я напишу о том, как отремонтировать поцарапанный диск или монитор samsung.
 <br>Заходите к нам еще, чтобы быть в курсе всех свежих событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
