--- a/24.html
+++ b/24.html
@@ -63,6 +63,12 @@
 <br>Думаю, что вы не зря потратили свое драгоценное время и данная статья хотя бы чем-нибудь помогла вам отремонтировать ремень безопасности. 
 <br>Заходите на наш сайт почаще, чтобы быть в курсе всех последних событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
