--- a/28.html
+++ b/28.html
@@ -64,6 +64,12 @@
 <br>Я надеюсь, что вы не зря потратили свои усилия и настоящая статья хотя бы чем-нибудь помогла вам сделать ремонт сотового телефона. В следующий раз я расскажу о том, как починить подоконник или сотовый.
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех актуальных событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
