--- a/3.html
+++ b/3.html
@@ -63,6 +63,12 @@
 <br>Думаю, что вы не напрасно потратили свои усилия и данная статья поможет вам починить офисный стул. В следующий раз я расскажу о том, как отремонтировать ваз 2106 или dvd rom.
 <br>Заходите к нам почаще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
