--- a/30.html
+++ b/30.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что вы не зря потратили свое время и эта статья хотя бы немного может помочь вам выполнить починку подушек безопасности. 
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех последних событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
