--- a/31.html
+++ b/31.html
@@ -63,6 +63,12 @@
 <br>Надеюсь, что данная статья хотя бы чем-то сможет помочь вам решить проблему. 
 <br>Заходите на наш портал еще, чтобы быть в курсе всех последних событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
