--- a/32.html
+++ b/32.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки приняли решение своими руками ремонтировать, то первым делом необходимо узнать о том, как заниматься починкой электронных часов. Для этого можно воспользоваться вашим любимым поисковиком, скажем, mail.ru, или пересмотреть старые подишивки журналов "Юный техник", "Умелый мастер", "Моделист-конструктор" и так далее, или позависать на форуме либо сообществе.
 <br>Надеюсь, что данная статья помогла вам сделать ремонт электронных часов. В следующий раз я напишу о том, как починить кубик рубика либо клавиатуру телефона.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
