--- a/34.html
+++ b/34.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы все таки решили собственными руками делать ремонт, то сперва наперво есть смысл узнать о том, как заниматься ремонтом лампы. Для этой цели можно воспользоваться гуглом, или просмотреть номера журналов "Домашний умелец", "Ремонтируем все своими руками" и т.д., или задать вопрос на профильном форуме либо сообществе.
 <br>Думаю, что вы не зря потратили усилия и эта статья хотя бы чем-то поможет вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
