--- a/37.html
+++ b/37.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили собственными руками ремонтировать, то сперва нужно узнать о том, как чинить вариатор. Для этих целей можно воспользоваться бингом либо google, или пересмотреть номера журналов "Домашняя мастерская", либо зайти на профильный форум.
 <br>Я надеюсь, что настоящая статья помогла вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
