--- a/4.html
+++ b/4.html
@@ -60,6 +60,12 @@
 <br>Если вы все же решили своими руками делать починку, то сперва наперво необходимо узнать о том, как ремонтировать дверную ручку. Для этого можно воспользоваться поисковиком, скажем, mail.ru либо гуглом.
 <br>Я думаю, что настоящая статья хотя бы чем-нибудь поможет вам отремонтировать дверную ручку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
