--- a/40.html
+++ b/40.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы все таки решили самому заниматься починкой, то первым делом надо узнать о том, как ремонтировать клюшку. Для этого можно воспользоваться бингом или yahoo.
 <br>Я думаю, что вы не напрасно потратили время и настоящая статья может помочь вам выполнить починку клюшки.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
