--- a/42.html
+++ b/42.html
@@ -62,6 +62,12 @@
 <br>Если вы решили самому ремонтировать, то сперва необходимо узнать о том, как делать ремонт деревянных дверей. Для этого можно воспользоваться каким-либо поисковиком, или изучить тематический форум.
 <br>Думаю, что эта статья может помочь вам починить деревянные двери.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
