--- a/43.html
+++ b/43.html
@@ -61,6 +61,12 @@
 <br>Я думаю, что вы не зря потратили свои усилия и данная статья поможет вам отремонтировать радиотелефон. В следующий раз я напишу о том, как отремонтировать резонатор или резонатор.
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех новых событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
