--- a/44.html
+++ b/44.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что эта статья хотя бы чем-нибудь помогла вам решить вопрос. В следующий раз я напишу о том, как отремонтировать компрессор либо компрессор.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех последних событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
