--- a/46.html
+++ b/46.html
@@ -61,6 +61,12 @@
 <br>Если вы решили самостоятельно делать починку, то сперва нужно узнать о том, как ремонтировать насос малыш. Для этих целей стоит воспользоваться каким-либо поисковиком, например, bing, или посмотреть подишивки журналов типа "Сам себе мастер", "Умелый мастер", или создать тему на форуме.
 <br>Думаю, что настоящая статья хотя бы чем-нибудь помогла вам отремонтировать насос малыш.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
