--- a/49.html
+++ b/49.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же решили самостоятельно делать ремонт, то сначала надо раздобыть информацию о том, как ремонтировать китайский телефон. Для этого стоит воспользоваться рамблером.
 <br>Надеюсь, что настоящая статья хотя бы немного помогла вам решить задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
