--- a/50.html
+++ b/50.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все таки приняли решение самому заниматься ремонтом, то сначала надо раздобыть инфу о том, как ремонтировать фасад. Для этого есть смысл воспользоваться каким-нибудь поисковиком, либо пообщаться на профильном сообществе.
 <br>Я думаю, что настоящая статья хотя бы чем-нибудь помогла вам решить задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
