--- a/51.html
+++ b/51.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение самостоятельно чинить, то сперва наперво необходимо раздобыть информацию о том, как выполнять ремонт жигулей. Для этой цели есть смысл воспользоваться мэилру либо рамблером, или пересмотреть выпуски журналов "Юный техник", "Моделист-конструктор" и тому подобное.
 <br>Думаю, что вы не зря потратили усилия и данная статья хотя бы чем-то поможет вам решить данную проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
