--- a/52.html
+++ b/52.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что вы не напрасно потратили свое драгоценное время и данная статья хотя бы чем-нибудь поможет вам решить данную проблему. В следующий раз я напишу о том, как починить внешний жесткий диск или домашний телефон.
 <br>Заходите на наш сайт почаще, чтобы быть в курсе всех новых событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
