--- a/55.html
+++ b/55.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили своими руками заниматься починкой, то сперва необходимо раздобыть инфу о том, как чинить катушку. Для этих целей есть смысл воспользоваться бингом или google.
 <br>Я думаю, что данная статья хотя бы чем-нибудь помогла вам решить проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
