--- a/56.html
+++ b/56.html
@@ -63,6 +63,12 @@
 <br>Надеюсь, что вы не зря потратили время и данная статья хотя бы немного поможет вам сделать ремонт материнской платы. 
 <br>Заходите к нам еще, чтобы быть в курсе всех последних событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
