--- a/57.html
+++ b/57.html
@@ -62,6 +62,12 @@
 <br>Если вы приняли решение самостоятельно заниматься починкой, то сперва наперво надо получить информацию о том, как заниматься ремонтом саманного дома. Для этой цели есть смысл воспользоваться каким-нибудь поисковиком, или пролистать номера журналов типа "Сам себе мастер", либо почитать специализированный форум.
 <br>Я надеюсь, что вы не зря потратили свое драгоценное время и эта статья поможет вам починить саманный дом. В следующий раз я напишу о том, как починить домашний телефон или бачок унитаза.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
