--- a/58.html
+++ b/58.html
@@ -63,6 +63,12 @@
 <br>Я надеюсь, что данная статья хотя бы чем-то поможет вам отремонтировать глушитель. В следующей статье я расскажу о том, как отремонтировать сенсор или сенсор.
 <br>Заходите к нам почаще, чтобы быть в курсе всех последних событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
