--- a/61.html
+++ b/61.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что вы не зря потратили свое время и настоящая статья может помочь вам починить трансформатор. В следующий раз я напишу о том, как отремонтировать кондиционер или кондиционер.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
