--- a/62.html
+++ b/62.html
@@ -61,6 +61,12 @@
 <br>Если вы решили самостоятельно заниматься починкой, то первым делом нужно узнать о том, как делать ремонт цепочки. Для этих целей стоит воспользоваться поисковиком, либо пересмотреть номера журналов "Моделист-конструктор", "Юный техник" и тому подобное, или почитать форум.
 <br>Я надеюсь, что данная статья помогла вам выполнить починку цепочки. В следующий раз я напишу о том, как починить керхер либо бетонную дорожку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
