--- a/66.html
+++ b/66.html
@@ -63,6 +63,12 @@
 <br>Надеюсь, что вы не напрасно потратили усилия и эта статья поможет вам починить молнию на джинсах. В следующей статье вы сможете прочесть о том, как отремонтировать капот либо сноуборд.
 <br>Заходите к нам еще, чтобы быть в курсе всех актуальных событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
