--- a/69.html
+++ b/69.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки решили самостоятельно заниматься ремонтом, то сперва наперво имеет смысл узнать о том, как чинить сабвуфер. Для этой цели можно воспользоваться поисковиком.
 <br>Я надеюсь, что вы не напрасно потратили свои усилия и эта статья помогла вам решить проблему. В следующий раз я расскажу о том, как починить брик psp или брик psp.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
