--- a/7.html
+++ b/7.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы все же решили самому заниматься ремонтом, то сперва наперво необходимо узнать о том, как ремонтировать спининг. Для этих целей есть смысл воспользоваться яндексом, или посмотреть выпуски журналов "Домашняя мастерская", "Умелый мастер", "Сам себе мастер" и так далее, или пообщаться на профильном форуме либо сообществе.
 <br>Я думаю, что вы не напрасно потратили время и настоящая статья хотя бы чем-то смогла помочь вам решить данный вопрос. В следующий раз я расскажу о том, как починить паркетный пол или паркетный пол.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
