--- a/70.html
+++ b/70.html
@@ -64,6 +64,12 @@
 <br>Я надеюсь, что вы не напрасно потратили время и эта статья хотя бы немного сможет помочь вам отремонтировать провод интернета. 
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех новых событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
