--- a/71.html
+++ b/71.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение самостоятельно делать ремонт, то первым делом необходимо узнать о том, как ремонтировать бампер ваз 2114. Для этих целей можно воспользоваться поисковиком, или почитать архивные подишивки журналов типа "Чиним все самому", либо задать вопрос на популярном сообществе или форуме.
 <br>Я надеюсь, что настоящая статья смогла помочь вам сделать ремонт бампера ваз 2114.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
