--- a/78.html
+++ b/78.html
@@ -63,6 +63,12 @@
 <br>Думаю, что вы не зря потратили усилия и настоящая статья помогла вам решить эту проблему. В следующей статье я расскажу о том, как отремонтировать замок дверной либо молнию на куртке.
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех свежих событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
