--- a/81.html
+++ b/81.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самому чинить, то сперва наперво надо узнать о том, как заниматься ремонтом карты памяти. Для этого можно воспользоваться каким-нибудь поисковиком, скажем, рамблером либо yandex, или пересмотреть архивные номера журналов "Юный техник", "Сам себе мастер" и т.д., или найти ответ на этот вопрос на популярном сообществе либо форуме.
 <br>Я надеюсь, что вы не напрасно потратили свои усилия и данная статья хотя бы чем-то смогла помочь вам отремонтировать карту памяти. В следующей статье я напишу о том, как починить вентиль или одежду.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
