--- a/82.html
+++ b/82.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что данная статья помогла вам починить лазерную мышь. В следующей статье я расскажу о том, как починить mp3 или спиннинг.
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех актуальных событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
