--- a/84.html
+++ b/84.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы приняли решение собственными силами ремонтировать, то первым делом необходимо раздобыть информацию о том, как ремонтировать кофеварку. Для этой цели можно воспользоваться поисковиком, или посмотреть выпуски журналов "Юный техник".
 <br>Надеюсь, что вы не зря потратили усилия и данная статья смогла помочь вам сделать ремонт кофеварки.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
