--- a/85.html
+++ b/85.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что настоящая статья помогла вам выполнить ремонт душа. В следующий раз вы сможете узнать о том, как отремонтировать поддон душевой кабины либо ремень.
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех новых событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
