--- a/86.html
+++ b/86.html
@@ -62,6 +62,12 @@
 <br>Если вы все же решили собственными руками чинить, то сперва надо получить инфу о том, как заниматься ремонтом дизеля. Для этой цели имеет смысл воспользоваться гуглом, или почитать выпуски журналов наподобие "Сам себе мастер" или "Моделист-конструктор".
 <br>Я надеюсь, что эта статья хотя бы чем-то сможет помочь вам решить этот вопрос. В следующей статье я напишу о том, как починить алюминиевый радиатор или алюминиевый радиатор.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
