--- a/89.html
+++ b/89.html
@@ -61,6 +61,12 @@
 <br>Если вы все таки решили собственными руками ремонтировать, то сначала надо узнать о том, как ремонтировать лампу. Для этих целей есть смысл воспользоваться bing или рамблером, или почитать архивные номера журналов наподобие "Моделист-конструктор" или "Домашний мастер", либо изучить популярный форум.
 <br>Я надеюсь, что вы не зря потратили свои усилия и настоящая статья помогла вам решить эту проблему. В следующей статье я расскажу о том, как починить терморегулятор или амортизатор ваз.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
