--- a/92.html
+++ b/92.html
@@ -61,6 +61,12 @@
 <br>Если вы приняли решение самому делать ремонт, то сначала нужно узнать о том, как чинить бочку. Для этой цели имеет смысл воспользоваться поисковиком, скажем, bing.
 <br>Думаю, что вы не зря потратили усилия и настоящая статья поможет вам решить проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
