--- a/97.html
+++ b/97.html
@@ -61,6 +61,12 @@
 <br>Если вы все же решили самостоятельно делать ремонт, то сперва наперво нужно узнать о том, как выполнять починку каблука. Для этой цели имеет смысл воспользоваться мэилру.
 <br>Я надеюсь, что вы не напрасно потратили усилия и настоящая статья смогла помочь вам выполнить ремонт каблука.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
