--- a/98.html
+++ b/98.html
@@ -61,6 +61,12 @@
 <br>Если вы решили самостоятельно ремонтировать, то сперва наперво необходимо узнать о том, как чинить навигатор. Для этих целей можно воспользоваться каким-то поисковиком.
 <br>Надеюсь, что вы не напрасно потратили свое время и настоящая статья хотя бы немного помогла вам отремонтировать навигатор.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
