--- a/99.html
+++ b/99.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что настоящая статья хотя бы немного сможет помочь вам решить проблему. В следующей статье я напишу о том, как починить газ контроль либо кузов.
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех свежих событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
